add modal image blur and watermark, still much to fix

--- a/lang/es.json
+++ b/lang/es.json
@@ -204,7 +204,7 @@
   "publicationSaved": "Su anuncio ha sido guardado. Ahora necesita la aprobación del administrador.",
   "newPublication": "Nuevo anuncio",
   "addNewPublication": "Anadir nuevo anuncio", 
-  "activeUntil": "Activo hasta",
+  "activeUntil": "Activo hasta el",
   "deleteConfirm": "¿Realmente quieres eliminar esta publicación??",
   "cancel": "Borrar",
   "confirm": "Confirmar", 
