--- a/lang/pt.json
+++ b/lang/pt.json
@@ -173,7 +173,16 @@
     "underDevelopment": "O painel ainda está em construção.\n\nPara colocar ou editar sua publicação, envie um whatsapp para",
     "publications": "Anúncios",
     "payments": "Pagamentos",
-    "newPayment": "Novo pago"
+    "newPayment": "Novo pago",
+    "publication": {
+      "publicationDelated": "Seu anúncio foi deletado. Agora precisa de aprovação do administrador.",
+      "activeUntil": "Ativo até",
+      "deleteConfirm": "Deseja mesmo excluir esta publicação?",
+      "cancel": "Cancelar",
+      "confirm": "Confirme",
+      "newPublication": "Novo anúncio",
+      "addNewPublication": "Adicionar novo anúncio"
+    }
   },
   "and": "e",
   "birthDate": "Data de nascimento",
@@ -188,7 +197,6 @@
   "description": "Descrição",
   "descriptionPlaceholder": "Escreva sua descrição aqui. Você pode adicionar emoji usando o ícone à direita.",
   "descriptionFreeWorning": "Para aproveitar uma publicação gratuita vitalícia, você ainda precisa escrever {missingWords} palavras.",
-  "publicationDelated": "Seu anúncio foi deletado. Agora precisa de aprovação do administrador.",
   "ending": "Final",
   "threeMonthsTitle": "Três meses de propaganda gratuita",
   "threeMonthsDescription": "Ao publicar seu anúncio antes de {limitDate}, você tem direito a três meses de publicidade gratuita.",
@@ -202,13 +210,7 @@
   "accept": "Termos de publicação",
   "acceptPubication": "Ao enviar essas informações, você permite a publicação do conteúdo em nosso site.",
   "errorAccept": "Você deve aceitar os termos de publicação", 
-  "publicationSaved": "Seu anúncio foi salvo. Agora precisa de aprovação do administrador.", 
-  "newPublication": "Novo anúncio",
-  "addNewPublication": "Adicionar novo anúncio",  
-  "activeUntil": "Ativo até",
-  "deleteConfirm": "Deseja mesmo excluir esta publicação?",
-  "cancel": "Cancelar",
-  "confirm": "Confirme",  
+  "publicationSaved": "Seu anúncio foi salvo. Agora precisa de aprovação do administrador.",  
   "registry": "Cadastro",
   "name": "Nome",
   "indipendentOrAgency": "Independente ou Agência",
