--- a/lang/en.json
+++ b/lang/en.json
@@ -83,7 +83,7 @@
   "escort": {
     "title": "{escort} escort",
     "gallery": {
-      "title": "Photos & videos",
+      "title": "Photos",
       "tapToEnlarge": "Tap to enlarge",
       "previewOf": "Preview of"
     },
@@ -201,9 +201,9 @@
   "threeMonthsDescription": "By publishing your advertisement before {limitDate} you are eligible for three months of free advertisement.",
   "freePublicationTitle": "Lifetime free advertisement",
   "freePublicationFailed": "If you want a lifetime free advertisement, please complete the following tasks:",
-  "freePublicationSuccess": "Parabéns! Ao escrever uma descrição de {wordsCount} palavras, fazer upload de {galleryCount} fotos e vídeos e selecionar {extraCount} serviços extras, você se qualifica para um anúncio gratuito vitalício.",
+  "freePublicationSuccess": "Parabéns! Ao escrever uma descrição de {wordsCount} palavras, fazer upload de {galleryCount} fotos e selecionar {extraCount} serviços extras, você se qualifica para um anúncio gratuito vitalício.",
   "fixDescription": "- You need to publish at least {minWords} words in your description, you are still missing {missingWords} words. You can review your description",
-  "fixGallery": "- You need to provide at least {minGallery} photos and videos, you are still missing {missingGallery} of them. You can review your media",
+  "fixGallery": "- You need to provide at least {minGallery} photos, you are still missing {missingGallery} of them. You can review your media",
   "fixExtra": "- You need to select at least {minExtra} extra services. You are still missing {missingExtra} of them. You can add more",
   "here": "here",
   "accept": "Publication Terms",
@@ -233,13 +233,11 @@
   "fromHour": "From hour",
   "toHour": "To hour",
   "selectHour": "Select a time",
-  "nudeMessage": "Photos and video with nudity will be removed.",
   "blurPhoto": "Blur face on photos",
-  "videoNotBlurred": "Only images are blurred. Videos are not.",
   "yes": "Yes",
   "no": "No",
-  "bookSession": "Book a photo and video session",
-  "galleryFreeWorning": "To get a free lifetime advertisement you still miss {missingGallery} photos or videos.",
+  "bookSession": "Book a photo session",
+  "galleryFreeWorning": "To get a free lifetime advertisement you still miss {missingGallery} photos.",
   "type": "Advertisement type",
   "individual": "Individual",
   "duo": "Duo",
@@ -302,7 +300,7 @@
   "month": "month",
   "months": "months",
   "oneMonthFree": "Enjoy a free month until February included!",
-  "photoSession": "The first payment includes a photo and video session with a glamour photographer!",
+  "photoSession": "The first payment includes a photo session with a glamour photographer!",
   "paymentInstructions1": "In a few hours we will send you the data for the payment to your WhatsApp.",
   "paymentInstructions2": "You can pay by bank transfer or cash deposit.",
   "previous": "Previous",
