--- a/lang/es.json
+++ b/lang/es.json
@@ -83,7 +83,7 @@
   "escort": {
     "title": "Escort {escort}",
     "gallery": {
-      "title": "Fotos y videos",
+      "title": "Fotos",
       "tapToEnlarge": "Toque para agrandar",
       "previewOf": "Vista previa de"
     },
@@ -201,9 +201,9 @@
   "threeMonthsDescription": "Al publicar tu anuncio antes del {limitDate} tienes derecho a 3 meses de publicación gratis.",
   "freePublicationTitle": "Publicación gratis de por vida",
   "freePublicationFailed": "Si deseas publicar gratis de por vida, por favor completa las siguientes tareas:",
-  "freePublicationSuccess": "¡Felicidades! Al escribir una descripción de {wordsCount} palabras, cargar {galleryCount} fotos y videos y seleccionar {extraCount} servicios adicionales, es elegible para un anuncio gratuito de por vida.",
+  "freePublicationSuccess": "¡Felicidades! Al escribir una descripción de {wordsCount} palabras, cargar {galleryCount} fotos y seleccionar {extraCount} servicios adicionales, es elegible para un anuncio gratuito de por vida.",
   "fixDescription": "- Debes escribir al menos {minWords} palabras en tu descripción, aún te quedan {missingWords}. Puedes revisionar tu descripción",
-  "fixGallery": "- Debes proporcionar al menos {minGallery} fotos y videos, todavía te faltan {missingGallery}. Puedes agregar mas",
+  "fixGallery": "- Debes proporcionar al menos {minGallery} fotos, todavía te faltan {missingGallery}. Puedes agregar mas",
   "fixExtra": "- Debes seleccionar al menos {minExtra} servicios adicionales. Aún te faltan {missingExtra}. Puedes agregar más",
   "here": "aquí",
   "accept": "Condiciones de publicación",
@@ -233,13 +233,11 @@
   "fromHour": "Desde la hora",
   "toHour": "Hasta la hora",
   "selectHour": "Seleccione una orario",
-  "nudeMessage": "Se eliminarán las fotos y videos con desnudos.",
   "blurPhoto": "Ocultar rostro en fotos",
-  "videoNotBlurred": "Solo las imágenes están ocultadas. Los vídeos no.",
   "yes": "Sí",
   "no": "No",
-  "bookSession": "Reserva una sesión de foto y vídeo",
-  "galleryFreeWorning": "Para aprovechar de una publicación gratis de por vida, aún te falta cargar {missingGallery} fotos y videos.",
+  "bookSession": "Reserva una sesión de foto",
+  "galleryFreeWorning": "Para aprovechar de una publicación gratis de por vida, aún te falta cargar {missingGallery} fotos.",
   "type": "Tipo de anuncio",
   "individual": "Individual",
   "duo": "Duo",
@@ -302,7 +300,7 @@
   "month": "mes",
   "months": "meses",
   "oneMonthFree": "Disfruta de un mes gratis hasta febrero incluido!",
-  "photoSession": "El primer pago incluye una sesión de foto y video con un fotógrafo de glamour!",
+  "photoSession": "El primer pago incluye una sesión de foto con un fotógrafo de glamour!",
   "paymentInstructions1": "En unas horas te vamos a enviar a tu whatsapp los datos por el pago.",
   "paymentInstructions2": "Puedes abonar con transferencia bancaria o deposito en efectivo.",
   "previous": "Anterior",  
