--- a/lang/pt.json
+++ b/lang/pt.json
@@ -83,7 +83,7 @@
   "escort": {
     "title": "Acompanhante {escort}",
     "gallery": {
-      "title": "Fotos e vídeos",
+      "title": "Fotos",
       "tapToEnlarge": "Toque para ampliar",
       "previewOf": "Pré-visualização de"
     },
@@ -202,9 +202,9 @@
   "threeMonthsDescription": "Ao publicar seu anúncio antes de {limitDate}, você tem direito a três meses de publicidade gratuita.",
   "freePublicationTitle": "Postagem gratuita para sempre",
   "freePublicationFailed": "Se você deseja um anúncio gratuito vitalício, corrija os seguintes problemas",
-  "freePublicationSuccess": "Parabéns! Ao escrever uma descrição das palavras {wordsCount}, carregar fotos e vídeos {galleryCount} e selecionar os serviços extras {extraCount}, você está qualificado para um anúncio gratuito vitalício.",
+  "freePublicationSuccess": "Parabéns! Ao escrever uma descrição das palavras {wordsCount}, carregar fotos {galleryCount} e selecionar os serviços extras {extraCount}, você está qualificado para um anúncio gratuito vitalício.",
   "fixDescription": "- Você deve escrever pelo menos {minWords} palavras em sua descrição, você ainda tem {missingWords} restantes. Você pode verificar sua descrição",
-  "fixGallery": "- Você deve fornecer pelo menos {minGallery} fotos e vídeos, ainda faltam {missingGallery}. Você pode adicionar mais",
+  "fixGallery": "- Você deve fornecer pelo menos {minGallery} fotos, ainda faltam {missingGallery}. Você pode adicionar mais",
   "fixExtra": "- Você precisa selecionar pelo menos {minExtra} serviços extras. Ainda faltam {missingExtra} deles. Você pode adicionar mais",
   "here": "aqui",
   "accept": "Termos de publicação",
@@ -235,13 +235,11 @@
   "fromHour": "Da hora",
   "toHour": "Para hora",
   "selectHour": "Selecione um horário",
-  "nudeMessage": "Fotos e vídeos com nudez serão removidos.",
   "blurPhoto": "Ocultar rosto nas fotos",
-  "videoNotBlurred": "Apenas as imagens estão ocultadas. Os vídeos não são",
   "yes": "Sim",
   "no": "Não",
-  "bookSession": "Agende uma sessão de foto e vídeo",
-  "galleryFreeWorning": "Para aproveitar uma publicação gratuita vitalícia, você ainda precisa enviar {missingMedia} fotos e vídeos.",
+  "bookSession": "Agende uma sessão de foto",
+  "galleryFreeWorning": "Para aproveitar uma publicação gratuita vitalícia, você ainda precisa enviar {missingMedia} fotos.",
   "type": "Tipo de anúncio",
   "individual": "Individual",
   "duo": "Duo",
@@ -304,7 +302,7 @@
   "month": "mês",
   "months": "meses",
   "oneMonthFree": "Desfrute de um mês gratuito até fevereiro incluído!",
-  "photoSession": "O primeiro pagamento inclui uma sessão de foto e vídeo com um fotógrafo glamoroso!",
+  "photoSession": "O primeiro pagamento inclui uma sessão de foto com um fotógrafo glamoroso!",
   "paymentInstructions1": "Em algumas horas enviaremos os dados para o pagamento para o seu WhatsApp.",
   "paymentInstructions2": "Você pode pagar por transferência bancária ou depósito em dinheiro.",
   "previous": "Anterior",  
