--- a/lang/es.json
+++ b/lang/es.json
@@ -197,6 +197,16 @@
         "category": "Independiente o Agencia",
         "languages": "Idiomas"
       },
+      "languages": {
+        "title": "Idiomas"
+      },
+      "availability": {
+        "title": "Disponibilidad",
+        "fromDay": "Desde el dia",
+        "toDay": "Hasta el dia",
+        "fromHour": "Desde la hora",
+        "toHour": "Hasta la hora"
+      },
       "body": {
         "title": "Figura"
       }
@@ -231,7 +241,6 @@
   "selectServices": "Seleccione los servicios ofrecidos",
   "extraFreeWorning": "Para aprovechar de una publicación gratis de por vida, aún te falta seleccionar {missingExtra} servicios especiales.",
   "selectLevel": "Selecciona tu nivel",
-  "availability": "Disponibilidad",
   "selectHour": "Seleccione una orario",
   "bookSession": "Reserva una sesión de foto",
   "galleryFreeWorning": "Para aprovechar de una publicación gratis de por vida, aún te falta cargar {missingGallery} fotos.",
